--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -536,9 +536,11 @@
                                     </mona-splitter>
 
                                 </mona-splitter-pane>
-                                <mona-splitter-pane  [collapsible]="true" [resizable]="false">
-                                    <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog</button>
+                                <mona-splitter-pane  [collapsible]="true" [resizable]="false" [size]="40">
+                                    <div style="width: 100%; height: 100%; padding: 2px;">
+<!--                                        <button monaButton>Open Dialog</button>-->
+                                        <mona-drop-down-list [data]="[1,2,3,4,5,6,7,8,9]"></mona-drop-down-list>
+
                                     </div>
                                 </mona-splitter-pane>
                             </mona-splitter>
