feat: Notification module and service

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -150,6 +150,8 @@
 
                                 <button monaButton (click)="openWindow(windowTitleTemplate)">Show Window</button>
 
+                                <button monaButton (click)="showNotification()">Show Notification</button>
+
                                 <ng-template #windowTitleTemplate>
                                     <span style="color: crimson; font-weight: bolder;">Templated Window Title</span>
                                 </ng-template>
