--- a/projects/mona-ui/styles/mona.scss
+++ b/projects/mona-ui/styles/mona.scss
@@ -33,6 +33,11 @@
     --mona-primary-active: #6369b5;
     --mona-primary-dark: #3d4171;
 
+    --mona-success: #32BEA6;
+    --mona-error: #FF3055;
+    --mona-warning: #FFDA6B;
+    --mona-info: #2196F3;
+
     --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
     --mona-shadow-color: #101114;
 
