--- a/projects/mona-ui/src/lib/notification/components/notification/notification.component.scss
+++ b/projects/mona-ui/src/lib/notification/components/notification/notification.component.scss
@@ -59,6 +59,7 @@ div.mona-notification-actions {
     align-items: center;
     & fa-icon {
         cursor: pointer;
+        margin-top: -4px;
     }
 }
 
@@ -92,5 +93,5 @@ div.mona-notification-text {
 
 div.mona-notification-progress {
     width: 100%;
-    height: 5px;
+    height: 1px;
 }
