feat: Dialog service

--- a/projects/mona-ui/styles/mona.scss
+++ b/projects/mona-ui/styles/mona.scss
@@ -37,6 +37,7 @@
     --mona-error: #FF3055;
     --mona-warning: #FFDA6B;
     --mona-info: #2196F3;
+    --mona-confirm: #CCCCFC;
 
     --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
     --mona-shadow-color: #101114;
