--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -152,6 +152,8 @@
 
                                 <button monaButton (click)="showNotification()">Show Notification</button>
 
+                                <button monaButton (click)="showDialog()">Show Dialog</button>
+
                                 <ng-template #windowTitleTemplate>
                                     <span style="color: crimson; font-weight: bolder;">Templated Window Title</span>
                                 </ng-template>
