--- a/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.html
@@ -3,7 +3,9 @@
         <mona-text-box [ngModel]="autoCompleteValue" (ngModelChange)="autoCompleteValue$.next($event)" (keydown)="onKeydown($event)"></mona-text-box>
     </div>
     <div class="mona-input-selector-icon" *ngIf="showClearButton && value" (click)="clearValue($event)">
-        <fa-icon [icon]="clearIcon"></fa-icon>
+        <button monaButton class="mona-input-button">
+            <fa-icon [icon]="clearIcon"></fa-icon>
+        </button>
     </div>
 </div>
 
