--- a/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
@@ -3,10 +3,14 @@
         <mona-text-box [ngModel]="comboBoxValue" (ngModelChange)="comboBoxValue$.next($event)" (keydown)="onKeydown($event)"></mona-text-box>
     </div>
     <div class="mona-input-selector-icon" *ngIf="showClearButton && valuePopupListItem" (click)="clearValue($event)">
-        <fa-icon [icon]="clearIcon"></fa-icon>
+        <button monaButton class="mona-input-button">
+            <fa-icon [icon]="clearIcon"></fa-icon>
+        </button>
     </div>
     <div class="mona-input-selector-icon" (click)="open()">
-        <fa-icon [icon]="dropdownIcon"></fa-icon>
+        <button monaButton class="mona-input-button">
+            <fa-icon [icon]="dropdownIcon"></fa-icon>
+        </button>
     </div>
 </div>
 
