--- a/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
@@ -17,7 +17,9 @@
         </div>
     </div>
     <div class="mona-input-selector-icon">
-        <fa-icon [icon]="dropdownIcon"></fa-icon>
+        <button monaButton class="mona-input-button">
+            <fa-icon [icon]="dropdownIcon"></fa-icon>
+        </button>
     </div>
 </div>
 
