--- a/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
@@ -1,5 +1,4 @@
 div.mona-numeric-text-box {
-    height: var(--mona-input-height);
     display: flex;
     & > [monaTextBox] {
         width: 100%;
@@ -14,13 +13,14 @@ div.mona-numeric-text-box-spinners {
     flex-wrap: nowrap;
     border-left: 1px solid var(--mona-border-color);
     & > [monaButton] {
-        min-height: 0;
+        //min-height: 0;
         display: flex;
         align-items: center;
         justify-content: center;
         border-right: none;
         border-left: none;
         flex: 1 1 50%;
+        padding: 2px 8px;
         font-size: 10px;
 
         & fa-icon {
