--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/abstract-slider/abstract-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/abstract-slider/abstract-slider.component.scss
@@ -1,8 +1,11 @@
+$base-height: 30px;
+$base-width: 30px;
+
 div.mona-slider {
     position: relative;
     user-select: none;
     &.mona-slider-horizontal {
-        height: calc(var(--mona-input-height) * 2);
+        height: ($base-height * 2);
         display: flex;
         align-items: center;
         cursor: pointer;
@@ -26,8 +29,8 @@ div.mona-slider {
         }
         & .mona-slider-handler {
             position: absolute;
-            width: calc(var(--mona-input-height) - 12px);
-            height: calc(var(--mona-input-height) - 12px);
+            width: ($base-width - 12);
+            height: ($base-height - 12);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -51,13 +54,13 @@ div.mona-slider {
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            height: calc(var(--mona-input-height) - 12px);
+            height: ($base-height - 12);
             & > span {
                 width: 100%;
                 height: 100%;
                 z-index: 3;
                 &.mona-dragging {
-                    height: calc(var(--mona-input-height) * 2);
+                    height: ($base-height * 2);
                 }
             }
         }
@@ -78,14 +81,14 @@ div.mona-slider {
             position: relative;
             align-items: center;
             justify-content: center;
-            height: calc(var(--mona-input-height) - 11px);
+            height: ($base-height - 11);
             display: flex;
             width: 0;
         }
     }
 
     &.mona-slider-vertical {
-        width: calc(var(--mona-input-height) * 2);
+        width: ($base-width * 2);
         height: 100%;
         display: flex;
         justify-content: center;
@@ -109,8 +112,8 @@ div.mona-slider {
         }
         & .mona-slider-handler {
             position: absolute;
-            width: calc(var(--mona-input-height) - 12px);
-            height: calc(var(--mona-input-height) - 12px);
+            width: ($base-height - 12);
+            height: ($base-height - 12);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -136,13 +139,13 @@ div.mona-slider {
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            width: calc(var(--mona-input-height) - 12px);
+            width: ($base-height - 12px);
             & > span {
                 width: 100%;
                 height: 100%;
                 z-index: 3;
                 &.mona-dragging {
-                    width: calc(var(--mona-input-height) * 2);
+                    width: ($base-height * 2);
                 }
             }
         }
@@ -172,7 +175,7 @@ div.mona-slider {
             position: relative;
             align-items: center;
             justify-content: center;
-            width: calc(var(--mona-input-height) - 11px);
+            width: ($base-height - 11);
             display: flex;
             height: 0;
         }
