--- a/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/expansion-panel/components/expansion-panel/expansion-panel.component.scss
@@ -8,7 +8,6 @@ div.mona-expansion-panel {
 
 div.mona-expansion-panel-header {
     width: 100%;
-    height: var(--mona-input-height);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -18,6 +17,10 @@ div.mona-expansion-panel-header {
     color: var(--mona-text);
     cursor: pointer;
     user-select: none;
+}
+
+div.mona-expansion-panel-header-title {
+    padding: 8px;
 }
 
 div.mona-expansion-panel-content {
