--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
@@ -7,7 +7,7 @@ ul {
     list-style: none;
     outline: none;
     & li {
-        height: calc(var(--mona-input-height) - 4px);
+        height: 26px;
         &.divider {
             height: auto;
             pointer-events: none;
