--- a/projects/mona-ui/src/lib/menus/modules/menubar/components/menubar/menubar.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/menubar/components/menubar/menubar.component.scss
@@ -1,6 +1,5 @@
 ul.mona-menubar {
     width: 100%;
-    height: var(--mona-input-height);
     list-style: none;
     display: flex;
     align-items: center;
@@ -11,6 +10,6 @@ ul.mona-menubar {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 0 10px;
+        padding: 8px 10px;
     }
 }
