--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
@@ -16,12 +16,11 @@ div.mona-window-title-bar {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    height: var(--mona-input-height);
 }
 
 div.mona-window-title-container {
     flex: 1;
-    padding: 0 10px;
+    padding: 8px 10px;
     height: 100%;
     display: flex;
     align-items: center;
