--- a/projects/mona-ui/src/lib/window/components/dialog-content/dialog-content.component.scss
+++ b/projects/mona-ui/src/lib/window/components/dialog-content/dialog-content.component.scss
@@ -81,7 +81,7 @@ div.mona-dialog-actions {
 }
 
 button.mona-dialog-action {
-    padding: 0 15px;
+    padding: 7px 15px;
     & span {
         font-weight: bold;
     }
